list.of instead of Arrays.asList